--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,7 +3,8 @@
     "pages/index/index"
   ],
   "window": {
-    "backgroundColor": "#F6F6F6",
+    "navigationStyle": "custom",
+    "backgroundColor": "#ffffff",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
     "navigationBarTitleText": "云开发 QuickStart",
