--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,7 +2,9 @@
   "pages": [
     "pages/index/index",
     "pages/mine/index",
-    "pages/recordlist/index"
+    "pages/recordlist/index",
+    "pages/loading/index"
+
   ],
   "window": {
     "navigationStyle": "custom",
