2021年6月2日 20点42分

--- a/cloudfunctions/getTime/config.json
+++ b/cloudfunctions/getTime/config.json
@@ -1,10 +1,11 @@
 {
   "permissions": {
-    "openapi": []
+    "openapi": [
+    ]
   },
   "triggers": [{
     "name": "triggerForAdd",
     "type": "timer",
-    "config": "* */20 * * * * *"
+    "config": "0  */2  *  *  *  *  *"
   }]
 }
