--- a/cloudfunctions/addData/config.json
+++ b/cloudfunctions/addData/config.json
@@ -1,11 +1,10 @@
 {
   "permissions": {
-    "openapi": [
-    ]
+    "openapi": []
   },
   "triggers": [{
     "name": "triggerForAdd",
     "type": "timer",
-    "config": "0  1  0  *  *  *  *"
+    "config": "0  0  *  *  *  *  *"
   }]
 }
